force-app/main/default/objects/Student__c/fields/Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Number__c</fullName>
    <displayFormat>ENR-{0000}</displayFormat>
    <label>Enrollment Number</label>
    <type>AutoNumber</type>
</CustomField>