force-app/main/default/objects/Student__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Enrollment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>