force-app/main/default/objects/Student__c/fields/Last_Application_Program_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Application_Program_c__c</fullName>
    <label>Last Application Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>