force-app/main/default/objects/Student__c/validationRules/Validate_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_DOB</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be a future date.</errorMessage>
</ValidationRule>