force-app/main/default/objects/Student__c/validationRules/Validate_Enrollment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Enrollment_Status</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT(Enrollment_Status__c))</errorConditionFormula>
    <errorDisplayField>Enrollment_Status__c</errorDisplayField>
    <errorMessage>Enrollment Status is required.</errorMessage>
</ValidationRule>