force-app/main/default/objects/Student__c/validationRules/Validate_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Phone_Number__c)) &amp;&amp; LEN(Phone_Number__c) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number must be exactly 10 digits.</errorMessage>
</ValidationRule>